--- a/css/scroll-snap-slides.css
+++ b/css/scroll-snap-slides.css
@@ -52,3 +52,48 @@ body {
   font-size: 3vh;
   color: #d9e8f0;
 }
+.carousel {
+  border: thick solid #d938f0;
+  /* Aplicamos display: flex. para que los elementos internos del contenedor tengan la dimencion de el contenedor padre */
+  display: flex;
+  width: 50%;
+  height: 50vh;
+  overflow-x: hidden;
+}
+.carousel-container {
+  width: 100%;
+  /* Para que se afilen en vertical utilizamos didplat-grid  */
+  display: grid;
+  grid-template-columns: repeat(5, 100%);
+  overflow: scroll hidden;
+  scroll-snap-type: x mandatory;
+  scroll-snap-type: inline mandatory;
+  scroll-snap-type: both mandatory;
+  scroll-snap-type: both proximity;
+}
+.carousel-slide {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #108eb4;
+  /* Para que funcione el scroll los contenedores hijos deben de tener */
+  scroll-snap-align: none;
+  scroll-snap-align: end;
+  scroll-snap-align: center;
+}
+.carousel-slide:nth-child(even) {
+  background-color: #1e2345;
+}
+.gradien-text {
+  background-image: linear-gradient(45deg, magenta, yellow);
+  /* para que el texto tome el fondo que generamos aqui ay que aplicar los dos siguientes propiedades */
+  -ms-background-clip: text;
+  -moz-background-clip: text;
+  -webkit-background-clip: text;
+  background-clip: text;
+  -ms-text-fill-color: transparent;
+  -moz-text-fill-color: transparent;
+  -webkit-text-fill-color: transparent;
+  text-fill-color: transparent;
+}
