--- a/css/motion.css
+++ b/css/motion.css
@@ -43,6 +43,7 @@ https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_animated_properties
 */
 .transitions .box {
   background-color: magenta;
+  border-color: green;
   transition-property: background-color;
   transition-duration: 500ms;
   transition-timing-function: ease;
@@ -76,4 +77,29 @@ https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_animated_properties
 .transitions .card img:hover {
   /* Con este efecto la imanen se mueve de izq a der */
   object-position: 00% 50%;
+}
+.transform-2D img {
+  transition: transform 2s ease-in-out;
+}
+.transform-2D img:hover {
+  transform: none;
+  transform: translateX(4rem);
+  transform: translateY(4rem);
+  transform: translate(-4rem, 4rem);
+  transform: translate(50%, 50%);
+  transform: translate(50%, 100px);
+  transform: scaleX(2);
+  transform: scaleY(2);
+  transform: scale(2, 2);
+  transform: scale(-1, -1);
+  transform: rotateX(60deg);
+  transform: rotateY(80deg);
+  transform: rotateZ(50deg);
+  transform: rotateZ(-50deg);
+  transform: rotate(50deg);
+  transform: skewX(25deg);
+  transform: skewX(-25deg);
+  transform: skewY(-25deg);
+  transform: skewY(25deg);
+  transform: skew(20deg, 20deg);
 }
