--- a/css/cubo-rubyk.css
+++ b/css/cubo-rubyk.css
@@ -12,8 +12,8 @@ h1 {
   position: relative;
   margin: 5em auto;
 
-  perspective: 2000px;
-  perspective-origin: -300px;
+  perspective: 3000px; /* Para poder apreciar el objeto en 3D */
+  perspective-origin: -800px; /* con esto ubicamos la posicion para ver la imagen */
 }
 .cubo,
 .cara {
@@ -30,7 +30,7 @@ h1 {
     transform: rotateX(0deg);
   }
   to {
-    transform: rotateX(-360deg);
+    transform: rotateX(360deg);
   }
 }
 .caras-inferiores {
@@ -69,4 +69,16 @@ h1 {
   background-size: 100% 100%;
   width: 100%;
   height: 100%;
+}
+.a {
+  background-color: blanchedalmond;
+  font-size: 20px;
+  border-radius: 15px;
+}
+
+.bodyCubo {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
