--- a/css/motion.css
+++ b/css/motion.css
@@ -136,4 +136,146 @@ https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_animated_properties
   transform: rotate3d(1, -0.5, -1, -30deg);
   /* https://developer.mozilla.org/en-US/docs/Web/CSS/transform-function/matrix3d */
   transform: matrix3d(1, 0, 0, 0, 0, 1, 6, 0, 0, 0, 1, 0, 50, 100, 0, 1.1);
+  transform: rotate3d(1, 2.5, -2, 60deg);
+  transform: rotate3d(1, 2.5, -2, 60deg) translate3d(2rem, 50%, 3rem)
+    scale3d(2, -5, 3);
+}
+
+.transform-origin img {
+  transition: transform 2s ease-in-out;
+  /* transform-origin: X Y Z; Resibe 3 valor*/
+  transform-origin: 50% 50% 0;
+  transform-origin: 0 0 0;
+  transform-origin: 0;
+  transform-origin: top left;
+  transform-origin: top right;
+  transform-origin: top center; /* etc */
+}
+.transform-origin img:hover {
+  transform: rotate(360deg);
+}
+
+.flip-card-1,
+.flip-card-2 {
+  border: thick solid black;
+  /* Centramos el marco */
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 5rem;
+  width: 600px;
+  height: 400px;
+
+  position: relative; /* para que las 2 caras se posicionen con el position absolute*/
+  cursor: pointer; /* Para que el usuario sepa que es un elemento interactivo */
+  transition: transform 1s ease-in-out; /* Para que esto tenga un efecto de animacion hay que aplicar una transicion */
+
+  perspective: 10rem;
+  transform-style: preserve-3d; /* Establece si los hijos de un elemento que tiene perspectiva en 3D de que forma se ban a comportar. en este caso los flip-face*/
+}
+
+.flip-card-2 {
+  transform-origin: center right;
+}
+
+.flip-card-1:hover {
+  /* con este combio de estado hover se hace girar la imagen */
+  transform: rotateY(180deg);
+}
+.flip-card-2:hover {
+  /* con este combio de estado hover se hace girar la imagen */
+  transform: translateX(-100%) rotateY(-180deg);
+}
+.flip-card-1 img,
+.flip-card-2 img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: 0 50%;
+}
+.flip-face {
+  position: absolute; /* para que las 2 caras se posicionen con el position relative*/
+  width: 100%; /* para que esta div tome el ancho de la targeta */
+  height: 100%; /* para que esta div tome el alto de la targeta */
+  /* Esta nueva propiedad determina que las caras se visualisen  backface-visibility: visible; este es el valor por defecto*/
+
+  backface-visibility: hidden; /* para que esta propiedad funcione nesecitamos la perspectiva en el contenedor padre de 3D que en este caso es la flis-card-1*/
+}
+.flip-from {
+  transform: rotateY(0deg);
+}
+.flip-back {
+  transform: rotateY(180deg);
+}
+/* Para manifestar nuestra linea de tiempo en CSS utilizamos @keyframes  */
+@keyframes myAwesomeAnimations {
+  /* from es fotograma de inicio */
+  from {
+    opacity: 0;
+    transform: translateX(0);
+  }
+  /* to es el fotograma final */
+  to {
+    opacity: 1;
+    transform: translateX(100%);
+  }
+}
+.my-animation {
+  /* Estas son todas las propiedades de la animacion */
+  /*  animation: name duration timing-function delay iteration-count direction fill-mode play-state; 
+  las realmente obligatorias son name duratios*/
+  /* animation: name duration timing-function delay iteration-count direction
+    fill-mode play-state; */
+  animation-name: myAwesomeAnimations;
+  animation-duration: 2s;
+  /* para realizar animaciones https://cubic-bezier.com/#.17,.67,.83,.67 */
+  animation-timing-function: cubic-bezier(1, 0, 0, 1);
+  animation-timing-function: cubic-bezier(0.33, 0.92, 0.92, 0.36);
+  animation-timing-function: cubic-bezier(0.17, 0.67, 0.83, 0.67);
+  animation-timing-function: ease-in-out;
+  animation-delay: 1500ms;
+  animation-iteration-count: 1;
+  animation-iteration-count: infinite;
+  animation-iteration-count: 3;
+  animation-direction: normal;
+  animation-direction: reverse;
+  animation-direction: alternate;
+  animation-fill-mode: none;
+  /* Al final de la animacion se queda con los estilos finales de la animacion 
+  animation-fill-mode: forwards*/
+  animation-fill-mode: forwards;
+  /* Al inicio de la animacion se queda con los estilos iniciales  animation-fill-mode: backwards*/
+  animation-fill-mode: backwards;
+  /* animation-fill-mode: both aplica los valores de forwards y backwards   */
+  animation-fill-mode: both;
+  animation-play-state: paused;
+  animation-play-state: running;
+  animation: myAwesomeAnimations 1.5s;
+  animation: myAwesomeAnimations 1.5s ease 250ms 7 alternate both running;
+}
+
+@keyframes myAwesomeAnimations2 {
+  0% {
+    opacity: 0;
+    transform: translateX(0);
+  }
+  50% {
+    opacity: 0.3;
+    transform: translateX(-50%);
+  }
+  75% {
+    opacity: 1;
+    transform: translateX(50%);
+  }
+  90% {
+    opacity: 1;
+    transform: translateX(-100%);
+  }
+  100% {
+    opacity: 0.5;
+    transform: translateX(100%);
+  }
+}
+
+.my-animation-2 {
+  animation: myAwesomeAnimations2 2s;
 }
